@@ -1,3 +1,7 @@
+2008-12-14  Marcus Meissner  <marcus@jet.franken.de>
+
+	* ptp.h: Found some Nikon property ids.
+
 2008-11-27  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Got the data for the D700 and D300, included.
